--- a/WindowsFormsApp2/LGSERIALAPP.csproj
+++ b/WindowsFormsApp2/LGSERIALAPP.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{EC4FAF18-8E01-4442-8DB8-7121701BF3E3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>LGSERIALAPP</RootNamespace>
-    <AssemblyName>LGSERIALAPP</AssemblyName>
+    <AssemblyName>oneM2MDevicePCT</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
