onem2m full test update

--- a/WindowsFormsApp2/LGUPCT.csproj
+++ b/WindowsFormsApp2/LGUPCT.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icons8-rs-232-male-48.png.ico</ApplicationIcon>
+    <ApplicationIcon>pct.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>WindowsFormsApp2.Program</StartupObject>
@@ -91,7 +91,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="icons8-rs-232-male-48.png.ico" />
+    <Content Include="pct.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
